# dot-steward

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  dot-steward.toml  mise.toml  package.json  tsconfig.base.json  tsconfig.json  turbo.json
.dot-steward/: apply.json  plan.json  state.json
.dot-steward/applies/: apply-2025-09-02T21-43-17.674Z.json  apply-2025-09-02T21-52-21.733Z.json  apply-2025-09-02T21-53-06.549Z.json
.dot-steward/plans/: 629f0d00992ac075.json  840fb30774304905.json  c3306176dc237962.json
.github/workflows/: biome.yml  ci.yml  pr-checks.yml  release.yml  security.yml  test.yml
apps/cli/: README.md  package.json
apps/cli/src/: index.ts
docs/: cli-rendering.md  design.md  plugin-authoring.md
example/: config.ts
examples/: README.md  basic.plan.ts  config.ts  hello.txt  package.json
plugins/app-store/: package.json
plugins/apt/: README.md  package.json
plugins/brew/: README.md  package.json
plugins/command/: package.json
plugins/config/: package.json
plugins/exec/: package.json
plugins/file/: README.md  package.json
plugins/ghostty/: package.json
plugins/git/: README.md  package.json
plugins/macos-settings/: ALL.md  package.json  tsconfig.json
plugins/mise/: package.json
plugins/repos/: README.md  package.json
plugins/shell/: package.json
plugins/shell-config/: package.json
plugins/starship/: package.json
scripts/: bump-version.mjs  check-empty-lines.mjs  check-static-this.mjs  postinstall.ts
src/: config.rs  main.rs  runner.rs
tests/: cli.rs
(+79 files in other folders)
