[package]
name = "dot-steward"
version = "0.1.0"
edition = "2021"
description = "Rust-based dotfile stewardship tool"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"

[lints.clippy]
all = "warn"
pedantic = "warn"
